# oxide-renderer

./: .gitignore  Cargo.toml  LICENSE  build.rs  index.html
shaders/: shader.wgsl
src/: app.rs  camera.rs  draw_traits.rs  instance.rs  lib.rs  light.rs  main.rs  model.rs  pipeline.rs  pipeline_manager.rs  renderable_object.rs  resources.rs  state.rs  texture.rs  uniforms.rs
